--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,8 @@
     --primary-color:#161616;
     --secondary-color:#F30C0C;
     --tri-color:#DBDBDB;
+
+    --separator:#3b3b3b;
 }
 body{
     width: 100vw;
@@ -27,6 +29,13 @@ h1,h2,h3{font-family: 'Roboto Condensed', sans-serif;}
 .sections .inner-sections{
     width: 90%;
     margin: 0 auto;
+}
+.separator{
+    width: 89%;
+    background: var(--separator);
+    height: 1px;
+    padding: 0 1rem;
+    margin: 0 auto 1em auto;
 }
 h1{font-size: 3.5rem; line-height: 1.5;}
 p,a{font-size: 16px;}
@@ -64,9 +73,66 @@ img{width: 100%; height: auto; object-fit: cover;}
     color: #DBDBDB;
     text-transform: uppercase;
     font-size: 1.1rem;
+    transition: ease 400ms;
 }
+.header-area .main-navbar .navbar-menu > li:hover > a,
+.header-area .main-navbar .navbar-menu > li.active > a
+{color: #fff;}
+.toggle-menu{
+    color: var(--tri-color);
+}
+.btn{
+    cursor: pointer;
+    padding: 1rem 1.5rem;
+    text-transform:uppercase;
+    font-weight: 600;
+    letter-spacing: 0.02em;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
+.btn-overlay{
+    background: rgba(78, 7, 7, 0.562);
+    width: 100%;
+    height: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+}
+.btn:hover .btn-overlay{
+    animation: btn-anim .3s linear;
+    transform: translateY(0);
+    height: 100%;
+}
+
+@keyframes btn-anim {
+    from{
+        transform: translateY(-10%);
+        height: 0;
+    }
+    to{
+        transform: translateY(0);
+        height: 100%;
+    }
+}
+
+.btn-text{
+    position: relative;
+    z-index: 3;
+}
+.cta{
+    margin-top: 4em;
+    margin-bottom: 1em;
+}
+.btn-secondary{
+    background: var(--secondary-color); 
+    color: #fff;
+}
+
 .col{width: 50%;}
-.col-wordings{color: var(--tri-color);}
+.col-wordings{width: 70%; color: var(--tri-color); line-height: 26px;}
+/* Main Styling */
 main{
     width: 100%;
 }
@@ -84,7 +150,7 @@ main{
     display: flex;
     align-items: center;
 }
-.intro h1{color: #fff;}
+.intro h1{color: #fff; margin: .5em 0 .3em 0;}
 
 .intro-inner .bg-img{
     border:2px solid #fff;
